[ G2 origin / G3 / G2 foundation ][ Bug Fix ] Fix .wp-block-navigation-item__description not being shown on mobile and wrap in .wp-block-navigation parent scope
- G2 origin: Remove .wp-block-navigation-item__description from parallel selectors with .gMenu_description to prevent mobile display:none from hiding nav block descriptions; add standalone rule at EOF
- G3 / G2 foundation: Wrap .wp-block-navigation-item__description in .wp-block-navigation parent scope for clarity

--- a/_g2/design-skin/foundation/_scss/layout/gmenu/_gmenu-design.scss
+++ b/_g2/design-skin/foundation/_scss/layout/gmenu/_gmenu-design.scss
@@ -145,11 +145,13 @@ $menu_padding_horizontal: 1.2em;
 /*-------------------------------------------*/
 /* Navigation Block Description
 /*-------------------------------------------*/
-.wp-block-navigation-item__description {
-	display: block;
-	overflow: hidden;
-	font-size: 10px;
-	line-height: 14px;
-	opacity: 0.6;
-	text-align: center;
+.wp-block-navigation {
+	.wp-block-navigation-item__description {
+		display: block;
+		overflow: hidden;
+		font-size: 10px;
+		line-height: 14px;
+		opacity: 0.6;
+		text-align: center;
+	}
 }
