--- a/_g3/assets/_scss/project/global-nav/_global-nav--design.scss
+++ b/_g3/assets/_scss/project/global-nav/_global-nav--design.scss
@@ -134,12 +134,14 @@
 /*-------------------------------------------*/
 /* Navigation Block Description
 /*-------------------------------------------*/
-.wp-block-navigation-item__description {
-	display: block;
-	overflow: hidden;
-	font-size: 10px;
-	line-height: 14px;
-	opacity: 0.6;
-	text-align: center;
-	white-space: nowrap;
+.wp-block-navigation {
+	.wp-block-navigation-item__description {
+		display: block;
+		overflow: hidden;
+		font-size: 10px;
+		line-height: 14px;
+		opacity: 0.6;
+		text-align: center;
+		white-space: nowrap;
+	}
 }
